--- a/src/styles/ToolsBar_style.scss
+++ b/src/styles/ToolsBar_style.scss
@@ -22,10 +22,11 @@ body {
   background: #FFF;
   box-shadow: 0px 1px 3px 0px rgba(16, 24, 40, 0.1), 0px 1px 2px 0px rgba(16, 24, 40, 0.06);
   margin-bottom: 1.1875rem;
-  margin-top: 0.1875rem;
+  margin-top: 1.1875rem;
   box-sizing: border-box;
 
-  @media (min-width: $breakpoint-xxl) {
+
+  @media (min-width: 1441px) {
     max-width: 1800px;
   }
 
